# embedded-wallet-wrapper

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
src/api/: api_req_model.rs  api_res_model.rs  mod.rs
src/frost/: frost_create.rs  frost_model.rs  frost_sign.rs  frost_verify.rs  mod.rs
src/rocksdb/: mod.rs  model.rs
